--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
     "expo": "~47.0.8",
@@ -16,9 +17,11 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-paper": "^5.0.0-rc.10",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
